# veilid_reddit_facebook

./: .env.staging  .gitignore  .gitmodules  AGENTS.md  API_DOCUMENTATION.md  CHANGELOG.md  DAO_ANALYSIS.md  DEPLOY.md  DEPLOY_TESTNET.md  FEEDBACK.md  FEEDBACK_PLAN.md  FINAL_REVIEW_CHECKLIST.md  HANDOFF.md  IDEAS.md  INTELLIGENCE_MANIFEST.md  LAUNCH_PLAN.md  MEMORY.md  MESSAGING_ANALYSIS.md  PERFORMANCE_REPORT.md  README.md  RELEASE_NOTES_V1.1.0.md  ROADMAP.md  STAGING.md  SUBMODULE_REPORT.md  TESTNET.md  TESTNET_MANIFEST.json  TODO.md  UAT.md  USER_MANUAL.md  VERSION.md  VISION.md  build-all.sh  go.mod  go.sum  index.html  package-lock.json  package-release.sh  package.json  setup-env.sh  tsconfig.json  (+2 more)
.github/workflows/: release.yml  test.yml
src/: config.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/background/: bobcoin_handlers.go  integration_test.go  lattice.sqlite  main.go
src-tauri/background/client/: veilid_client.go  veilid_client_test.go
src-tauri/background/core/: bobcoin_bridge.go  crypto.go  delegation.go  delegation_test.go  proposals.go  qv.go  qv_test.go
src-tauri/background/schema/: schema.go
src-tauri/background/storage/: sqlite.go
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CommentThread.tsx  NetworkStatus.tsx  ProfileContainer.test.tsx  ProfileContainer.tsx  ProfileEditor.test.tsx  ProfileEditor.tsx  SovereignOnboarding.tsx  TipButton.tsx  WalletTab.tsx
src/hooks/: useBobcoin.ts  useDAO.ts  useDiscovery.ts
src/services/: aggregator.test.ts  aggregator.ts  (+1 more)
(+2 files in other folders)
